Trying to get logo to work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,53 @@
 
   <body>
 
+  <div class="row">
+    <div class="large-3 columns">
+      <h1><img src="esilogo-leaf-small.png" /></h1>
+    </div>
+    <div class="large-9 columns">
+      <ul class="right button-group">
+        <li><a href="#" class="button">Link 1</a></li>
+        <li><a href="#" class="button">Link 2</a></li>
+        <li><a href="#" class="button">Link 3</a></li>
+        <li><a href="#" class="button">Link 4</a></li>
+      </ul>
+    </div>
+  </div>
     <%= yield %>
+  <!-- Footer -->
 
+  <footer class="row">
+    <div class="large-12 columns">
+      <hr />
+      <div class="row">
+        <div class="large-6 columns">
+          <p>&copy; Copyright no one at all. Go to town.</p>
+        </div>
+        <div class="large-6 columns">
+          <ul class="inline-list right">
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+      document.write('<script src=js/vendor/' +
+              ('__proto__' in {} ? 'zepto' : 'jquery') +
+              '.js><\/script>')
+  </script>
+
+
+  <script src="js/foundation.min.js"></script>
+  <script>
+      $(document).foundation();
+  </script>
+  <!-- End Footer -->
     
     <%= javascript_include_tag "application" %>
   </body>
