--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,14 +24,14 @@
 
   <div class="row">
     <div class="large-3 columns">
-      <h1><img src="esilogo-leaf-small.png" /></h1>
+      <h1><%=link_to image_tag('esilogo-leaf-small-logo.png'), root_path, id: "logo"%></h1>
     </div>
     <div class="large-9 columns">
       <ul class="right button-group">
         <li><a href="#" class="button">Link 1</a></li>
         <li><a href="#" class="button">Link 2</a></li>
         <li><a href="#" class="button">Link 3</a></li>
-        <li><a href="#" class="button">Link 4</a></li>
+        <li><%= link_to "About Us",aboutus_path, class: "button" %></li>
       </ul>
     </div>
   </div>
@@ -50,7 +50,7 @@
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
             <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
+            <li><%= link_to "About Us", aboutus_path%></li>
           </ul>
         </div>
       </div>
