--- a/app/views/content/aboutus.html.erb
+++ b/app/views/content/aboutus.html.erb
@@ -9,22 +9,19 @@
 
     <article>
 
-      <h3><a href="#">Blog Post Title</a></h3>
-      <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
+      <h3>Mission</h3>
+
 
       <div class="row">
         <div class="large-6 columns">
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-          <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+          <p>E-Sports Initiative is a nonprofit organization that strives to galvanize recreational and competitive video game players, as well as the gaming industry, to raise money for local causes. We work to beneficially impact the community while maintaining a positive image of the industry and its consumers.</p>
+
+            <p>The current goal of ESI is to empower local Columbus-area students to study STEM (science, technology, engineering, and math)-related fields, and to enrich the educational experience of these students by directly funding affiliated programs.</p>
         </div>
         <div class="large-6 columns">
           <img src="http://placehold.it/400x240&text=[img]" />
         </div>
       </div>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
 
     </article>
 
@@ -32,26 +29,66 @@
 
     <article>
 
-      <h3><a href="#">Blog Post Title</a></h3>
-      <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
+      <h3>Members</h3>
 
       <div class="row">
         <div class="large-6 columns">
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
-          <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-        </div>
-        <div class="large-6 columns">
-          <img src="http://placehold.it/400x240&text=[img]" />
-        </div>
-      </div>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-
-      <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+          <p><b>President:</b> Ray Tan</p>
+          <p><b>Faculty Advisor:</b> Dr. Deb Grzybowski</p>
+          <p><b>Vice President:</b> Juanita Dickhaus</p>
+          <p><b>Treasurer:</b> Alex Stasinos</p>
+          <p><b>Secretary:</b> Brandon Merriman</p>
+          <p><b>Charity:</b> Alex Chen</p>
+          <p><b>Event Programming:</b> Kase Corstanje</p>
+          <p><b>Corporate Liaison:</b> Brett Hutton</p>
+          <P><b>Social Media:</b>Sean Cody</P>
+          <p><b>Recruiting:</b> Reasey Hem</p>
+          <p><b>Marketing:</b> Tom Wilson</p>
+          <p><b>Graphic Design:</b> Sean Davis</p>
+          <p><b>Webmaster:</b> Brandon Jacques</p>
+          <br>
+          <h2>General Members</h2>
+          <p>Chris Brown</p>
+          <p>Jameson Daosavanh</p>
+          <p>Chris Vroegindewey</p>
+          <p>Curtis Rummel</p>
+          <p>Deshannon Gilbert</p>
+          <p>Eric Howell</p>
+          <p>Amar Karamali</p>
+          <p>Jacob Kipi</p>
+          <p>Jon Leung</p>
+          <p>Jonathan Huang&nbsp;</p>
+          <p>Kyle Tracht</p>
+          <p>Reasey Hem</p>
+          <p>Sam Posa</p>
+          <p>Travis Remlinger</p>
+          <p>John Tse</p>
+          <p>Sean Davis</p>
+          <p>Shane Osborne</p>
+          <p>Dorien Xia</p>
 
     </article>
-
   </div>
+  <article>
 
+    <h3>Partners</a></h3>
+
+    <div class="row">
+      <div class="large-6 columns">
+        <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa.</p>
+        <p>Boudin aliqua adipisicing rump corned beef. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+      </div>
+      <div class="large-6 columns">
+        <img src="http://placehold.it/400x240&text=[img]" />
+      </div>
+    </div>
+
+    <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+
+    <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+
+  </article>
+
+</div>
   <!-- End Main Content -->
  </body>
