--- a/app/views/content/aboutus.html.erb
+++ b/app/views/content/aboutus.html.erb
@@ -66,14 +66,12 @@
           <p>Sean Davis</p>
           <p>Shane Osborne</p>
           <p>Dorien Xia</p>
-      </div>
-     </div>
+
     </article>
   </div>
-  <hr/>
   <article>
 
-    <h3>Partners</h3>
+    <h3>Partners</a></h3>
 
     <div class="row">
       <div class="large-6 columns">
@@ -84,7 +82,13 @@
         <img src="http://placehold.it/400x240&text=[img]" />
       </div>
     </div>
+
+    <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+
+    <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
+
   </article>
+
 </div>
   <!-- End Main Content -->
  </body>
