--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -28,6 +28,7 @@
       <li><%=link_to image_tag('Lan.jpg')%></li>
       <li><%= link_to image_tag('joinus.png')%></li>
       <li><%= link_to image_tag('esicomBanner.png')%></li>
+      <li><img src="http://placehold.it/1000x400&text=[ img 4 ]" /> </li>
     </ul>
     <!-- <div id="slider">
       
