--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
     <div class="large-9 columns">
       <ul class="right button-group">
         <li><a href="#" class="button">Link 1</a></li>
-        <li><a href="#" class="button">Link 2</a></li>
-        <li><a href="#" class="button">Link 3</a></li>
+        <li><%= link_to "Sponsors", sponsors_path, class: "button" %></li>
+        <li><a href="https://www.facebook.com/esportsinitiative" class="button">Facebook</a></li>
         <li><%= link_to "About Us",aboutus_path, class: "button" %></li>
       </ul>
     </div>
@@ -48,8 +48,8 @@
         <div class="large-6 columns">
           <ul class="inline-list right">
             <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
+            <li><%=link_to "Sponsors", sponsors_path %></li>
+            <li><a href="https://www.facebook.com/esportsinitiative">Facebook</a></li>
             <li><%= link_to "About Us", aboutus_path%></li>
           </ul>
         </div>
