--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -9,22 +9,47 @@
 
     <article>
 
-      <h3>Mission</h3>
+      <h3>Sponsors</h3>
 
 
       <div class="row">
-        <div class="large-6 columns">
-          <p>E-Sports Initiative is a nonprofit organization that strives to galvanize recreational and competitive video game players, as well as the gaming industry, to raise money for local causes. We work to beneficially impact the community while maintaining a positive image of the industry and its consumers.</p>
-
-          <p>The current goal of ESI is to empower local Columbus-area students to study STEM (science, technology, engineering, and math)-related fields, and to enrich the educational experience of these students by directly funding affiliated programs.</p>
-        </div>
-        <div class="large-6 columns">
-          <img src="http://placehold.it/400x240&text=[img]" />
+        <div class="large-9 columns">
+          <ul>
+            <li><%= link_to image_tag("osu-logo.png", alt: "OSU") + "\tThe Ohio State University", 'http://www.osu.edu' %></li>
+            <li><%= link_to image_tag("engLogo-web.png", alt: "College of Engineering") + "\tThe Ohio State University College of Engineering", 'http://www.engineering.osu.edu'%></li>
+            <li><%= link_to image_tag("gunnarLogo.jpg", alt: "Gunnar") + "\tGunnar Optics", 'http://www.gunnars.com/' %></li>
+            <li><%= link_to image_tag("valveLogo.jpg", alt: "Valve") + "\tValve", 'http://valvesoftware.com' %></li>
+            <li><%= link_to image_tag("razorLogo.jpg", alt: "Razer") + "\tRazer", 'Razer.com' %></li>
+            <li><%= link_to image_tag("canesLogo.jpg", alt: "Raising Cane's") + "\tRaising Canes", 'http://raisingcanes.com/' %></li>
+          </ul>
         </div>
       </div>
 
     </article>
-  </div>
+    <article>
 
+      <h3>Partners</h3>
+     <div class ="row">
+      <div class="large-9 columns">
+       <ul>
+         <li><%= link_to image_tag("nationwideLogo.jpg", alt: "Nationwide") + "\tNationwide Children's Hospital", 'http://nationwidechildrenshospital.org' %></li>
+       </ul>
+      </div>
+    </div>
 
+    </article>
+    <article>
+
+      <h3>Honorable Mentions</h3>
+      <div class ="row">
+        <div class="large-9 columns">
+          <ul>
+            <li><%= link_to image_tag("papaLogo.jpg", alt: "Papa Johns") + "\tPapa Johns", 'http://papajohns.com' %></li>
+            <li><%= link_to image_tag("markpiLogo.gif", alt: "Mark Pi's") + "\tMark Pi's", 'http://markpis.com' %></li>
+            <li><%= link_to image_tag("donutsLogo.jpg", alt: "Buckeye Donuts") + "\tBuckeye Donuts", 'http://buckeyedonuts.com' %></li>
+          </ul>
+        </div>
+      </div>
+
+    </article>
 </body>
