Trying Fix Sponsors Page

--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -18,9 +18,9 @@
             <li><%= link_to image_tag("osu-logo.png", alt: "OSU") + "\tThe Ohio State University", 'http://www.osu.edu' %></li>
             <li><%= link_to image_tag("engLogo-web.png", alt: "College of Engineering") + "\tThe Ohio State University College of Engineering", 'http://www.engineering.osu.edu'%></li>
             <li><%= link_to image_tag("gunnarLogo.jpg", alt: "Gunnar") + "\tGunnar Optics", 'http://www.gunnars.com/' %></li>
-            <li><%= link_to image_tag("valveLogo.jpg", alt: "Valve") + "\tValve", 'http://valvesoftware.com' %></li>
+            <li> <%= link_to image_tag("valveLogo.jpg", alt: "Valve") + "\tValve", 'http://valvesoftware.com' %> </li>
             <li><%= link_to image_tag("razorLogo.jpg", alt: "Razer") + "\tRazer", 'Razer.com' %></li>
-            <li><%= link_to image_tag("canesLogo.jpg", alt: "Raising Cane's") + "\tRaising Canes", 'http://raisingcanes.com/' %></li>
+            <li> <%= link_to image_tag("canesLogo.jpg", alt: "Raising Cane's") + "\tRaising Canes", 'http://raisingcanes.com/' %> </li>
           </ul>
         </div>
       </div>
@@ -31,9 +31,9 @@
       <h3>Partners</h3>
      <div class ="row">
       <div class="large-9 columns">
-       <ul>
-         <li><%= link_to image_tag("nationwideLogo.jpg", alt: "Nationwide") + "\tNationwide Children's Hospital", 'http://nationwidechildrenshospital.org' %></li>
-       </ul>
+       
+         <%= link_to image_tag("nationwideLogo.jpg", alt: "Nationwide") + "\tNationwide Children's Hospital", 'http://nationwidechildrenshospital.org' %>
+       
       </div>
     </div>
 
@@ -43,11 +43,11 @@
       <h3>Honorable Mentions</h3>
       <div class ="row">
         <div class="large-9 columns">
-          <ul>
-            <li><%= link_to image_tag("papaLogo.jpg", alt: "Papa Johns") + "\tPapa Johns", 'http://papajohns.com' %></li>
-            <li><%= link_to image_tag("markpiLogo.gif", alt: "Mark Pi's") + "\tMark Pi's", 'http://markpis.com' %></li>
-            <li><%= link_to image_tag("donutsLogo.jpg", alt: "Buckeye Donuts") + "\tBuckeye Donuts", 'http://buckeyedonuts.com' %></li>
-          </ul>
+          
+            <%= link_to image_tag("papaLogo.jpg", alt: "Papa Johns") + "\tPapa Johns", 'http://papajohns.com' %>
+            <%= link_to image_tag("markpiLogo.gif", alt: "Mark Pi's") + "\tMark Pi's", 'http://markpis.com' %>
+            <%= link_to image_tag("donutsLogo.jpg", alt: "Buckeye Donuts") + "\tBuckeye Donuts", 'http://buckeyedonuts.com' %>
+          
         </div>
       </div>
 
