--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -14,14 +14,14 @@
 
       <div class="row">
         <div class="large-9 columns">
-          <ul>
-            <li><%= link_to image_tag("osu-logo.png", alt: "OSU") + "\tThe Ohio State University", 'http://www.osu.edu' %></li>
-            <li><%= link_to image_tag("engLogo-web.png", alt: "College of Engineering") + "\tThe Ohio State University College of Engineering", 'http://www.engineering.osu.edu'%></li>
-            <li><%= link_to image_tag("gunnarLogo.jpg", alt: "Gunnar") + "\tGunnar Optics", 'http://www.gunnars.com/' %></li>
-            <li> <%= link_to image_tag("valveLogo.jpg", alt: "Valve") + "\tValve", 'http://valvesoftware.com' %> </li>
-            <li><%= link_to image_tag("razorLogo.jpg", alt: "Razer") + "\tRazer", 'Razer.com' %></li>
-            <li> <%= link_to image_tag("canesLogo.jpg", alt: "Raising Cane's") + "\tRaising Canes", 'http://raisingcanes.com/' %> </li>
-          </ul>
+          
+            <%= link_to image_tag("osu-logo.png", alt: "OSU") + "\tThe Ohio State University", 'http://www.osu.edu' %>
+            <%= link_to image_tag("engLogo-web.png", alt: "College of Engineering") + "\tThe Ohio State University College of Engineering", 'http://www.engineering.osu.edu'%>
+            <%= link_to image_tag("gunnarLogo.jpg", alt: "Gunnar") + "\tGunnar Optics", 'http://www.gunnars.com/' %>
+             <%= link_to image_tag("valveLogo.jpg", alt: "Valve") + "\tValve", 'http://valvesoftware.com' %> 
+            <%= link_to image_tag("razorLogo.jpg", alt: "Razer") + "\tRazer", 'Razer.com' %>
+             <%= link_to image_tag("canesLogo.jpg", alt: "Raising Cane's") + "\tRaising Canes", 'http://raisingcanes.com/' %> 
+          
         </div>
       </div>
 
