--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     </div>
     <div class="large-9 columns">
       <ul class="right button-group">
-        <li><a href="#" class="button">Link 1</a></li>
+        <li><%= link_to "Scholarship", scholarship_path, class: "button"%></li>
         <li><%= link_to "Sponsors", sponsors_path, class: "button" %></li>
         <li><a href="https://www.facebook.com/esportsinitiative" class="button">Facebook</a></li>
         <li><%= link_to "About Us",aboutus_path, class: "button" %></li>
