--- a/app/views/content/scholarship.html.erb
+++ b/app/views/content/scholarship.html.erb
@@ -9,7 +9,7 @@
 
     <article>
 
-      <h3>Sponsors</h3>
+      <h3>Women in e-Sports (WieS) Fellowship 2013</h3>
 
 
       <div class="row">
@@ -19,7 +19,7 @@
 
           <p>The aim of this fellowship is to provide financial support and encouragement for women who demonstrate interest in the digital media industry and to furnish them with an opportunity to work closely with the industry throughout the duration of the fellowship and beyond.</p>
 
-          <p>Download the application < ahref = "http://www.esportsinitiative.org/documents/WomenIneSportsScholarshipApplication.pdf"> here </a>and be sure to submit application and all supporting documents by Friday, September 6th 2013 at 5:00pm to scholarships@esportsinitiative.org</p>
+          <p>Download the application <a href = "http://www.esportsinitiative.org/documents/WomenIneSportsScholarshipApplication.pdf"> here </a>and be sure to submit application and all supporting documents by Friday, September 6th 2013 at 5:00pm to scholarships@esportsinitiative.org</p>
 
         </div>
       </div>
