--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -15,12 +15,12 @@
       <div class="row">
         <div class="large-9 columns">
           
-            <%= link_to (image_tag("osu-logo.png", alt: "OSU") + "\tThe Ohio State University", 'http://www.osu.edu') %>
-            <%= link_to( image_tag("engLogo-web.png", alt: "College of Engineering") + "\tThe Ohio State University College of Engineering", 'http://www.engineering.osu.edu')%>
-            <%= link_to( image_tag("gunnarLogo.jpg", alt: "Gunnar") + "\tGunnar Optics", 'http://www.gunnars.com/') %>
-            <%= link_to( image_tag("valveLogo.jpg", alt: "Valve") + "\tValve", 'http://valvesoftware.com' )%>
-            <%= link_to (image_tag("razorLogo.jpg", alt: "Razer") + "\tRazer", 'Razer.com') %>
-            <%= link_to (image_tag("canesLogo.jpg", alt: "Raising Cane's") + "\tRaising Canes", 'http://raisingcanes.com/') %>
+            <%= link_to(image_tag("osu-logo.png", alt: "OSU"), 'http://www.osu.edu') %>
+            <%= link_to(image_tag("engLogo-web.png", alt: "College of Engineering"), 'http://www.engineering.osu.edu')%>
+            <%= link_to(image_tag("gunnarLogo.jpg", alt: "Gunnar"), 'http://www.gunnars.com/') %>
+            <%= link_to(image_tag("valveLogo.jpg", alt: "Valve"), 'http://valvesoftware.com' )%>
+            <%= link_to(image_tag("razorLogo.jpg", alt: "Razer"), 'Razer.com') %>
+            <%= link_to(image_tag("canesLogo.jpg", alt: "Raising Cane's"), 'http://raisingcanes.com/') %>
           
         </div>
       </div>
@@ -32,7 +32,7 @@
      <div class ="row">
       <div class="large-9 columns">
        
-         <%= link_to (image_tag("nationwideLogo.jpg", alt: "Nationwide") + "\tNationwide Children's Hospital", 'http://nationwidechildrenshospital.org') %>
+         <%= link_to (image_tag("nationwideLogo.jpg", alt: "Nationwide"), 'http://nationwidechildrenshospital.org') %>
        
       </div>
     </div>
@@ -44,9 +44,9 @@
       <div class ="row">
         <div class="large-9 columns">
           
-            <%= link_to( image_tag("papaLogo.jpg", alt: "Papa Johns") + "\tPapa Johns", 'http://papajohns.com') %>
-            <%= link_to (image_tag("markpiLogo.gif", alt: "Mark Pi's") + "\tMark Pi's", 'http://markpis.com') %>
-            <%= link_to (image_tag("donutsLogo.jpg", alt: "Buckeye Donuts") + "\tBuckeye Donuts", 'http://buckeyedonuts.com') %>
+            <%= link_to(image_tag("papaLogo.jpg", alt: "Papa Johns"), 'http://papajohns.com') %>
+            <%= link_to(image_tag("markpiLogo.gif", alt: "Mark Pi's"), 'http://markpis.com') %>
+            <%= link_to(image_tag("donutsLogo.jpg", alt: "Buckeye Donuts"), 'http://buckeyedonuts.com') %>
           
         </div>
       </div>
