Redid scholarships. Only OSU added

--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -15,12 +15,7 @@
       <div class="row">
         <div class="large-9 columns">
           
-            <%= link_to(image_tag("osu-logo.png", alt: "OSU"), 'http://www.osu.edu', id: "OSULogo") %>
-            <%= link_to(image_tag("engLogo-web.png", alt: "College of Engineering"), 'http://www.engineering.osu.edu', id: "OSUEngineering")%>
-            <%= link_to(image_tag("gunnarLogo.jpg", alt: "Gunnar"), 'http://www.gunnars.com/', id: "gunnarlogo") %>
-            <%= link_to(image_tag("valveLogo.jpg", alt: "Valve"), 'http://valvesoftware.com', id: "valvelogo" )%>
-            <%= link_to(image_tag("razorLogo.jpg", alt: "Razer"), 'Razer.com', id: "razorlogo") %>
-            <%= link_to(image_tag("canesLogo.jpg", alt: "Raising Cane's"), 'http://raisingcanes.com/', id:"caneslogo") %>
+            <%= link_to(image_tag("osu-logo.png", alt: "OSU"), "http://www.osu.edu", id: "OSULogo") %>
           
         </div>
       </div>
@@ -31,8 +26,7 @@
       <h3>Partners</h3>
      <div class ="row">
       <div class="large-9 columns">
-       
-         <%= link_to (image_tag("nationwideLogo.jpg", alt: "Nationwide"), 'http://nationwidechildrenshospital.org', id:"caneslogo") %>
+
        
       </div>
     </div>
@@ -43,11 +37,7 @@
       <h3>Honorable Mentions</h3>
       <div class ="row">
         <div class="large-9 columns">
-          
-            <%= link_to(image_tag("papaLogo.jpg", alt: "Papa Johns"), 'http://papajohns.com', id: "papajohnslogo") %>
-            <%= link_to(image_tag("markpiLogo.gif", alt: "Mark Pi's"), 'http://markpis.com', id: "markpislogo") %>
-            <%= link_to(image_tag("donutsLogo.jpg", alt: "Buckeye Donuts"), 'http://buckeyedonuts.com', id: "buckeyedonutslogo") %>
-          
+
         </div>
       </div>
 
