--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
+            <li><%= link_to "Scholarship", scholarship_path%></li>
             <li><%=link_to "Sponsors", sponsors_path %></li>
             <li><a href="https://www.facebook.com/esportsinitiative">Facebook</a></li>
             <li><%= link_to "About Us", aboutus_path%></li>
