--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -14,7 +14,9 @@
 
       <div class="row">
         <div class="large-9 columns">
-          
+         <ul>
+           <li><%=link_to image_tag('osu-logo.png'), 'http://osu.edu', id: "logo"%></li>
+         </ul>
 
           
         </div>
