--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="large-9 columns">
          <ul>
-           <li><%=link_to image_tag('osu-logo.png'), id: "logo"%></li>
+           <li><%=link_to( image_tag('osu-logo.png'))%></li>
          </ul>
 
           
