Fixed up homepage
Added more to the contact us, facebook/twitter buttons

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -69,12 +69,26 @@
         <h4>Get in touch!</h4>
             
         <div class="row">
-          <div class="large-9 columns">
-            <p>We'd love to hear from you, you attractive person you.</p>
+          <div class="large-6 columns">
+            <p>Want to work with ESI?</p>
           </div>
-          <div class="large-3 columns">
-            <a href="#" class="radius button right">Contact Us</a>
+          <div class="large-6 columns">
+              <ul class="even-3 button-group">
+                <li><a href="#" class="small button">Volunteer with us</a></li>
+                <li><a href="#" class="small button">Meet with us</a></li>
+                <li><a href="#" class="small button">Contact us</a></li>
+              </ul>
           </div>
+        </div>
+        <div class="row">
+        <div class="large-6 columns">
+          <p>Want to keep up to date?</p>
+        </div>
+        <div class="large-6 columns">
+           <ul class="even-2 button-group">
+             <li><a href="#" class="small button">Facebook</a></li>
+             <li><a href="#" class="small button">Twitter</a></li>
+           </ul>
         </div>
       </div>
       
