--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
   <body>
 
   <div class="row">
-    <div class="large-3 columns">
-      <h1><%=link_to image_tag('esilogo-leaf-small-logo.png'), root_path, id: "logo"%></h1>
+    <div class="large-5 columns">
+      <h2><%=link_to image_tag('esilogo-leaf-small-logo.png'), root_path, id: "logo"%> E-Sports Initiative</h2>
     </div>
-    <div class="large-9 columns">
+    <div class="large-7 columns">
       <ul class="right button-group">
         <li><%= link_to "Scholarship", scholarship_path, class: "button"%></li>
         <li><%= link_to "Sponsors", sponsors_path, class: "button" %></li>
@@ -43,7 +43,7 @@
       <hr />
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
+          <p>&copy; E-Sports Initiative</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
