--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -15,7 +15,9 @@
       <div class="row">
         <div class="large-9 columns">
          <p>
-           <li><%=link_to(image_tag('osu-logo.png'))%></li>
+          <ul>
+           <li><%=link_toimage_tag('osu-logo.png')%></li>
+          </ul>
          </p>
 
           
