--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -25,7 +25,7 @@
   <div class="row">
     <div class="large-12 columns">
     <ul data-orbit>
-      <li><%= link_to image_tag('rails.png')%></li>
+      <li><img src="http://placehold.it/1000x400&text=[ img 1 ]" /></li>
       <li><img src="http://placehold.it/1000x400&text=[ img 2 ]" /></li>
       <li><img src="http://placehold.it/1000x400&text=[ img 3 ]" /></li>
       <li><img src="http://placehold.it/1000x400&text=[ img 4 ]" /></li>
