--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -16,7 +16,7 @@
         <div class="large-9 columns">
          <p>
           <ul>
-           <li><%=link_toimage_tag('osu-logo.png')%></li>
+           <li><%=link_to image_tag('rails.png')%></li>
           </ul>
          </p>
 
