--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -16,7 +16,7 @@
         <div class="large-9 columns">
          <p>
           <ul>
-           <li><%=link_to image_tag('rails.png')%></li>
+           <li><%=link_to (image_tag('osu-logo.pngu'), "http://osu.edu") %></li>
           </ul>
          </p>
 
