--- a/app/views/content/sponsors.html.erb
+++ b/app/views/content/sponsors.html.erb
@@ -16,7 +16,7 @@
         <div class="large-9 columns">
          <p>
           <ul>
-           <li><%=image_tag('canesLogo.jpg') %></li>
+           <li><%=image_tag('esilogo-leaf-small.png') %></li>
           </ul>
          </p>
 
